# Tropical-Island-Laser-Battle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  credits.txt
data/meshes/: bad_guy.dae  good_guy.dae
data/meshes/parrot/: parrot.dae  parrot_AnimFlyCircles.dae  parrot_AnimFlyStartSequence.dae  parrot_AnimStartFlying.dae
data/shaders/: brdf.glsli  fullscreen_tri.vsh  lighting.glsli  math.glsli  mesh_viz.fsh  mesh_viz.vsh  object.fsh  object.vsh  object_simple.fsh  outline_forward.fsh  outline_forward.vsh  outline_resolve.fsh  output.fsh  simple.fsh  simple.gsh  simple.vsh  terrain.fsh  terrain.gsh  terrain.vsh  water.fsh  water.gsh  water.vsh
data/shaders/effects/: fizzle.fsh  fizzle.vsh  laser.fsh  linesprite.vsh
data/shaders/flat/: flat.fsh  flat.vsh  flat_instanced.fsh  flat_instanced.vsh  flat_template.fsh  flat_template.vsh  flat_windy.vsh
data/shaders/postprocess/: gaussian_blur.fsh
data/shaders/rigged/: rigged_mesh.vsh
data/shaders/skybox/: atmosphere.glsli  skybox.fsh  skybox.vsh
data/shaders/ssao/: ssao.fsh  ssaoblur.fsh
data/shaders/startsequence/: glow_sphere.fsh  glow_sphere.vsh  spaceship.fsh  spaceship.vsh
data/shaders/ui/: hpindicator.fsh  hpindicator.vsh  screen_sprite.fsh  screen_sprite.vsh
data/shaders/util/: depth_reconstruct.glsli
data/shaders/worldobject/: instanced_wo_frag.glsl  instanced_wo_vtx.glsl  (+2 more)
src/: Camera.cc  Camera.hh  ColorUtil.h  ECS.hh  Game.cc  Game.hh  MathUtil.hh  Mesh3D.cc  Mesh3D.hh  SimpleMesh.hh  Util.hh  fwd.hh  main.cc
src/ECS/: ECS.cc  Join.hh  Misc.hh
src/advanced/: Editor.cc_  Editor.hh  Utility.cc  Utility.hh
src/animation/: Animation.hh  AnimationEasing.cc  AnimationEasing.hh  Animator.cc  Animator.hh  AnimatorManager.cc  AnimatorManager.hh  KeyFrame.hh  KeyFrameAttribute.cc  KeyFrameAttribute.hh
src/audio/: AudioManager.cc  AudioManager.hh
src/combat/: Combat.cc  Combat.hh  CommandTool.cc  CommandTool.hh  Humanoid.cc  MobileUnit.cc  SpawnTool.cc  SpawnTool.hh  Walking.cc  Walking.hh
src/demo/: Demo.cc  Demo.hh
src/effects/: Effects.cc  Effects.hh
src/environment/: Lighting.cc  Lighting.hh  Parrot.cc  Parrot.hh  Wind.cc  Wind.hh
src/navmesh/: NavMesh.cc  NavMesh.hh  PathfinderTool.cc  PathfinderTool.hh
src/obstacles/: Collision.cc  Collision.hh  Obstacle.cc  Obstacle.hh  WorldFluff.cc  WorldFluff.hh
src/rendering/: GaussianBlur.cc  GaussianBlur.hh  InstancedRenderer.cc  InstancedRenderer.hh  MainRenderPass.cc  MainRenderPass.hh  MeshViz.cc  MeshViz.hh  PostProcess.cc  PostProcess.hh  RenderTargets.cc  RenderTargets.hh  ScreenSpaceAo.cc  ScreenSpaceAo.hh  SharedResources.cc  SharedResources.hh
src/rtree/: RStar.hh  RTree.hh  TGDomain.hh  test.cc_
src/startsequence/: StartSequence.cc  StartSequence.hh
src/terrain/: SkyBox.cc  SkyBox.hh  Terrain.cc  Terrain.hh  TerrainMaterial.cc  TerrainMaterial.hh  Water.cc  Water.hh
src/ui/: SpriteRenderer.cc  SpriteRenderer.hh
src/util/: ImGui.hh  SparseDiscreteDistribution.hh  SphericalDistributions.hh
(+3 files in other folders)
